Доработка задачи на космический корабль № 2 Пути до картинок выведены в переменные Скейл картинок и переменных для 720р Ограничение перемещения чёрной дыры по х (теперь только левая половина экрана) Новые константы отвечающие за значения вражеских объектов

--- a/sem2hw68/CMakeLists.txt
+++ b/sem2hw68/CMakeLists.txt
@@ -11,7 +11,7 @@ add_definitions(-DSFML_STATIC)
 include_directories("../liba/SFML/include/")
 link_directories("../liba/SFML/lib/")
 
-#include_directories("ext/SFML/include/")	# добавляем директории
+#include_directories("ext/SFML/include/")
 #include_directories("inc/")
 #link_directories("ext/SFML/lib/")
 
